specs/020-map-set-tuples/examples/invalid/map-value-type.ts
let m: Map<string, int> = new Map<string, int>();
m.set("a", "b");
